--- a/Warm_up_000_Exporting_to_PDF.ipynb
+++ b/Warm_up_000_Exporting_to_PDF.ipynb
@@ -25,7 +25,8 @@
    "outputs": [],
    "source": [
     "pip install pandoc\n",
-    "pip install nbconvert PyPDF2"
+    "pip install nbconvert PyPDF2\n",
+    "#test"
    ]
   },
   {
