--- a/Warm_up_03_variables_and_expressions.ipynb
+++ b/Warm_up_03_variables_and_expressions.ipynb
@@ -41,21 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2401"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2401\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "x = 7 ** 4\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,10 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(f'We live on planet {planet}')\n",
+    "print(f'Its diameter is {diameter}')"
+   ]
   },
   {
    "attachments": {},
@@ -108,21 +111,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "print(type(planet))"
+   ]
   },
   {
    "attachments": {},
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +147,13 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "distance = 200\n",
+    "time = 1.4\n",
+    "speed = distance / time\n",
+    "\n",
+    "print(speed)"
+   ]
   },
   {
    "attachments": {},
@@ -157,18 +165,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The value is  142  and the type is  <class 'int'>\n"
+      "The value is 142 and the type is <class 'int'>\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "speedint = int(speed)\n",
+    "print(f'The value is {speedint} and the type is {type(speedint)}')"
+   ]
   },
   {
    "attachments": {},
@@ -180,21 +191,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "if speed == speedint:\n",
+    "    print(True)\n",
+    "else:\n",
+    "    print(False)\n",
+    "\n",
+    "# The variables are not equal, because the integer value of the float is not the same as the float value. The float value is higher because decimals are included."
+   ]
   },
   {
    "attachments": {},
@@ -206,21 +221,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "if speedint < speed:\n",
+    "    print(True)\n",
+    "else:\n",
+    "    print(False)"
+   ]
   },
   {
    "attachments": {},
@@ -232,21 +249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "171.42857142857142"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "205.7142857142857\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "speed = speed * 1.2\n",
+    "print(speed)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -258,7 +275,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "MFA",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -271,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.9.21"
   },
   "orig_nbformat": 2
  },
