--- a/Warm_up_04_conditional_statements.ipynb
+++ b/Warm_up_04_conditional_statements.ipynb
@@ -42,19 +42,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number is divisible by 5.\n"
+      "Number is divisible by 5\n"
      ]
     }
    ],
    "source": [
-    "\n"
+    "number = 10\n",
+    "\n",
+    "if number % 5 == 0:\n",
+    "    print('Number is divisible by 5')\n",
+    "else:\n",
+    "    print('Number is not divisible by 5')\n"
    ]
   },
   {
@@ -68,18 +73,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number is divisible by 5 or 11.\n"
+      "Number is divisible by 5 or 11\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "number = 59\n",
+    "\n",
+    "if number % 5 == 0 or number % 11:\n",
+    "    print('Number is divisible by 5 or 11')\n",
+    "else:\n",
+    "    print('Number is not divisible by 5 or 11')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,18 +103,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The letter b is not a vowel.\n"
+      "The letter a is a vowel.\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "letter = 'a'\n",
+    "\n",
+    "vowels = 'aeiou'\n",
+    "\n",
+    "if letter in vowels:\n",
+    "    print(f'The letter {letter} is a vowel.')\n",
+    "else:\n",
+    "    print(f'The letter {letter} is not a vowel.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,18 +142,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "B\n"
+      "The grade for a score of 0.85 is B.\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "def score_to_grade(score):\n",
+    "    if score < 0.0 or score > 1.0:\n",
+    "        return \"Error: Score is out of range.\"\n",
+    "    elif score >= 0.9:\n",
+    "        return \"A\"\n",
+    "    elif score >= 0.8:\n",
+    "        return \"B\"\n",
+    "    elif score >= 0.7:\n",
+    "        return \"C\"\n",
+    "    elif score >= 0.6:\n",
+    "        return \"D\"\n",
+    "    else:\n",
+    "        return \"F\"\n",
+    "\n",
+    "# Test the function with a score of 0.85\n",
+    "test_score = 0.85\n",
+    "grade = score_to_grade(test_score)\n",
+    "print(f'The grade for a score of {test_score} is {grade}.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,7 +184,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "MFA",
    "language": "python",
    "name": "python3"
   },
@@ -158,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
