--- a/Warm_up_06_loops_and_iterations.ipynb
+++ b/Warm_up_06_loops_and_iterations.ipynb
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -233,83 +233,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We add the case A1\n",
-      "We add the case A2\n",
-      "We add the case A3\n",
-      "We add the case A4\n",
-      "We add the case A5\n",
-      "We add the case A6\n",
-      "We add the case A7\n",
-      "We add the case A8\n",
-      "We add the case B1\n",
-      "We add the case B2\n",
-      "We add the case B3\n",
-      "We add the case B4\n",
-      "We add the case B5\n",
-      "We add the case B6\n",
-      "We add the case B7\n",
-      "We add the case B8\n",
-      "We add the case C1\n",
-      "We add the case C2\n",
-      "We add the case C3\n",
-      "We add the case C4\n",
-      "We add the case C5\n",
-      "We add the case C6\n",
-      "We add the case C7\n",
-      "We add the case C8\n",
-      "We add the case D1\n",
-      "We add the case D2\n",
-      "We add the case D3\n",
-      "We add the case D4\n",
-      "We add the case D5\n",
-      "We add the case D6\n",
-      "We add the case D7\n",
-      "We add the case D8\n",
-      "We add the case E1\n",
-      "We add the case E2\n",
-      "We add the case E3\n",
-      "We add the case E4\n",
-      "We add the case E5\n",
-      "We add the case E6\n",
-      "We add the case E7\n",
-      "We add the case E8\n",
-      "We add the case F1\n",
-      "We add the case F2\n",
-      "We add the case F3\n",
-      "We add the case F4\n",
-      "We add the case F5\n",
-      "We add the case F6\n",
-      "We add the case F7\n",
-      "We add the case F8\n",
-      "We add the case G1\n",
-      "We add the case G2\n",
-      "We add the case G3\n",
-      "We add the case G4\n",
-      "We add the case G5\n",
-      "We add the case G6\n",
-      "We add the case G7\n",
-      "We add the case G8\n",
-      "We add the case H1\n",
-      "We add the case H2\n",
-      "We add the case H3\n",
-      "We add the case H4\n",
-      "We add the case H5\n",
-      "We add the case H6\n",
-      "We add the case H7\n",
-      "We add the case H8\n",
-      "[['A', 1], ['A', 2], ['A', 3], ['A', 4], ['A', 5], ['A', 6], ['A', 7], ['A', 8], ['B', 1], ['B', 2], ['B', 3], ['B', 4], ['B', 5], ['B', 6], ['B', 7], ['B', 8], ['C', 1], ['C', 2], ['C', 3], ['C', 4], ['C', 5], ['C', 6], ['C', 7], ['C', 8], ['D', 1], ['D', 2], ['D', 3], ['D', 4], ['D', 5], ['D', 6], ['D', 7], ['D', 8], ['E', 1], ['E', 2], ['E', 3], ['E', 4], ['E', 5], ['E', 6], ['E', 7], ['E', 8], ['F', 1], ['F', 2], ['F', 3], ['F', 4], ['F', 5], ['F', 6], ['F', 7], ['F', 8], ['G', 1], ['G', 2], ['G', 3], ['G', 4], ['G', 5], ['G', 6], ['G', 7], ['G', 8], ['H', 1], ['H', 2], ['H', 3], ['H', 4], ['H', 5], ['H', 6], ['H', 7], ['H', 8]]\n"
+      "['A1', 'A2', 'A3', 'A4', 'A5', 'A6', 'A7', 'A8', 'B1', 'B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'B8', 'C1', 'C2', 'C3', 'C4', 'C5', 'C6', 'C7', 'C8', 'D1', 'D2', 'D3', 'D4', 'D5', 'D6', 'D7', 'D8', 'E1', 'E2', 'E3', 'E4', 'E5', 'E6', 'E7', 'E8', 'F1', 'F2', 'F3', 'F4', 'F5', 'F6', 'F7', 'F8', 'G1', 'G2', 'G3', 'G4', 'G5', 'G6', 'G7', 'G8', 'H1', 'H2', 'H3', 'H4', 'H5', 'H6', 'H7', 'H8']\n"
      ]
     }
    ],
    "source": [
-    "### Use this as a starting point\n",
-    "columns = ['A','B','C','D','E','F','G','H']\n",
-    "rows = range(1,9) # Remember that the range function takes all values in steps of 1 from the initial value given up to,\n",
-    "# but including the max value. I.e. in this case the numbers go from 1 to 8\n",
-    "chessboard =[] # The method .append() adds an element at the end of the list\n",
+    "def make_chessboard(columns, rows):\n",
+    "    chessboard = []\n",
+    "    for column in columns:\n",
+    "        for row in rows:\n",
+    "            position = f'{column}{row}'\n",
+    "            chessboard.append(position)\n",
+    "    return chessboard\n",
     "\n",
+    "# Starting point\n",
+    "columns = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H']\n",
+    "rows = range(1, 9)\n",
     "\n",
-    "\n",
+    "# Generate the chessboard\n",
     "my_board = make_chessboard(columns, rows)\n",
     "print(my_board)"
    ]
@@ -326,29 +267,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "def find(names_list, name_to_find):\n",
+    "    for name in names_list:\n",
+    "        if name == name_to_find:\n",
+    "            return True\n",
+    "    return False\n",
     "\n",
+    "list_of_names = ['Superman', 'Batman', 'Green Lantern', 'Batman', 'Aquaman', 'Batman']\n",
+    "name_to_find = 'Batman'\n",
+    "name_to_find2 = 'Flash'\n",
     "\n",
-    "find(['Superman', 'Batman', 'Green Lantern', 'Batman', 'Aquaman', 'Batman'], 'Batman')"
+    "find(['Superman', 'Batman', 'Green Lantern', 'Batman', 'Aquaman', 'Batman'], 'Batman')\n",
+    "find(['Superman', 'Batman', 'Green Lantern', 'Aquaman'], 'Flash')\n",
+    "find(list_of_names, name_to_find)\n",
+    "find(list_of_names, name_to_find2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -357,12 +309,18 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "def find_name(names_list, name_to_find):\n",
+    "    return name_to_find in names_list\n",
+    "\n",
+    "find_name(['Superman', 'Batman', 'Green Lantern', 'Batman', 'Aquaman', 'Batman'], 'Batman')\n",
+    "find_name(list_of_names, name_to_find)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -374,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -383,13 +341,18 @@
        "3"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
+    "def count(names_list, name_to_find):\n",
+    "    count = 0\n",
+    "    for name in names_list:\n",
+    "        if name == name_to_find:\n",
+    "            count += 1\n",
+    "    return count\n",
     "\n",
     "count(['Superman', 'Batman', 'Green Lantern', 'Batman', 'Aquaman', 'Batman'], 'Batman')"
    ]
@@ -408,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -425,15 +388,27 @@
     "    This function takes an integer n as an argument and \n",
     "    returns the list of the n first numbers of the fibonacci list\n",
     "    \"\"\"\n",
+    "    if n <= 0:\n",
+    "        return []\n",
+    "    elif n == 1:\n",
+    "        return [0]\n",
+    "    elif n == 2:\n",
+    "        return [0, 1]\n",
     "    \n",
+    "    fib_sequence = [0, 1]\n",
+    "    for i in range(2, n):\n",
+    "        next_number = fib_sequence[-1] + fib_sequence[-2]\n",
+    "        fib_sequence.append(next_number)\n",
     "    \n",
+    "    return fib_sequence\n",
+    "\n",
     "print(fibonnacci(20))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "MFA",
    "language": "python",
    "name": "python3"
   },
@@ -447,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
